fix: align blog post images

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -15,6 +15,15 @@
   }
 }
 
+/* center images in blogposts */
+article img {
+  margin: 0 auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
 [astro-icon] > * {
   stroke-width: 1.5;
 }
